openshift/overlays/prod/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rollouts-demo
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: 'true'
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: rollouts-demo
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
